--- a/DataAccessApi/DataAccessApi/Properties/launchSettings.json
+++ b/DataAccessApi/DataAccessApi/Properties/launchSettings.json
@@ -12,19 +12,19 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "basedata",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "DataAccessApi": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    }
+	"DataAccessApi": {
+	  "commandName": "Project",
+	  "launchBrowser": true,
+	  "launchUrl": "basedata",
+	  "applicationUrl": "https://localhost:5001;http://localhost:5000",
+	  "environmentVariables": {
+		"ASPNETCORE_ENVIRONMENT": "Development"
+	  }
+	}
   }
 }
