--- a/DataAccessApi/DataAccessApi/Properties/launchSettings.json
+++ b/DataAccessApi/DataAccessApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "basedata",
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
 	"DataAccessApi": {
 	  "commandName": "Project",
 	  "launchBrowser": true,
-	  "launchUrl": "basedata",
+	  "launchUrl": "",
 	  "applicationUrl": "https://localhost:5001;http://localhost:5000",
 	  "environmentVariables": {
 		"ASPNETCORE_ENVIRONMENT": "Development"
