New database configuration
- Connection to database in `appsettings.json`
- Automatic database creation

--- a/DataAccessApi/DataAccessApi/appsettings.json
+++ b/DataAccessApi/DataAccessApi/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "ConnectionStrings": {
+	"SqlDatabase": "Server=(localdb)\\mssqllocaldb;Database=DefaultDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+	"LogLevel": {
+	  "Default": "Information",
+	  "Microsoft": "Warning",
+	  "Microsoft.Hosting.Lifetime": "Information"
+	}
   },
   "AllowedHosts": "*"
 }
