--- a/DataAccessApi/DataAccessApi/DataAccess.API.csproj
+++ b/DataAccessApi/DataAccessApi/DataAccess.API.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DAL\DAL.csproj" />
+    <ProjectReference Include="..\DAL\DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
