Init commit demo version

--- a/DataAccessApi/DataAccessApi/appsettings.json
+++ b/DataAccessApi/DataAccessApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-	"SqlDatabase": "Server=(localdb)\\mssqllocaldb;Database=DefaultDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+	"SqlDatabase": "Server=(localdb)\\mssqllocaldb;Database=mydb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
 	"LogLevel": {
