--- a/Recipient/QueueClient/QueueClient.csproj
+++ b/Recipient/QueueClient/QueueClient.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Library</OutputType>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="EasyNetQ" Version="3.7.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="EasyNetQ" Version="4.0.5" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="3.1.3" />
+	</ItemGroup>
 
 </Project>
