--- a/Recipient/Recipient/appsettings.json
+++ b/Recipient/Recipient/appsettings.json
@@ -1,16 +1,8 @@
 {
-	"Logging": {
-		"LogLevel": {
-			"Default": "Information",
-			"Microsoft": "Warning",
-			"Microsoft.Hosting.Lifetime": "Information"
-		},
-		"EnableBackground": true
-	},
 	"AllowedHosts": "*",
 	"RabbitMq": {
 		"Host": "localhost",
-		"QueueName": "default_v2"
+		"Queue": "deploy_v1"
 	},
 	"Background": {
 		"WorkersCount": 3
